Added commentary function for easy reviewing

--- a/uppsatsen.tex
+++ b/uppsatsen.tex
@@ -18,6 +18,10 @@
 \usepackage[swedish]{babel} % If in Swedish
 %\usepackage[english]{babel} % If in English
 
+% Här finns Ulriks kommentarfunktioner
+\usepackage{hyperref}
+\input{kommentarfunktion.tex}
+
 \begin{document}
 %
 % Do not change
@@ -116,6 +120,8 @@ Text på svenska\ldots
 \section*{Abstract}
 
 Text in English\ldots
+
+\uek{Det är bara en kommentar för att se att det funkar}
 
 \newpage
 
